borsh-derive/src/internals/schema/struct/snapshots/borsh_derive__internals__schema__r#struct__tests__check_with_funcs_skip_conflict.snap
---
source: borsh-derive/src/internals/schema/struct/mod.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(with_funcs(...))`",
)
